--- a/opengl_study/opengl_study.vcxproj.filters
+++ b/opengl_study/opengl_study.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="simple_sdk_billbaord.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="RectPackTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="heightmap.h">
